Bug #19076
osd/ReplicatedBackend.cc: 884: FAILED a ssert(j != bc->pulling.end())
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
3a126a2/src/osd/ReplicatedBackend.cc: In function 'virtual void C_ReplicatedBackend_OnPullComplete::finish(ThreadPool::TPHandle&)' thread 7f90c28f2700 time 2017-02-24 07:36:51.657352 2017-02-24T07:36:51.679 INFO:tasks.ceph.osd.2.smithi037.stderr:/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/12.0.0-730-g3a126a2/rpm/el7/BUILD/ceph-12.0.0-730-g3a126a2/src/osd/ReplicatedBackend.cc: 884: FAILED a ssert(j != bc->pulling.end()) 2017-02-24T07:36:51.679 INFO:tasks.ceph.osd.2.smithi037.stderr: 2017-02-24T07:36:51.679 INFO:tasks.ceph.osd.2.smithi037.stderr: ceph version 12.0.0-730-g3a126a2 (3a126a2294c8f4fecc0a6f9e5514d595d5defcd3) 2017-02-24T07:36:51.679 INFO:tasks.ceph.osd.2.smithi037.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x110) [0x7f90e6d3cc80] 2017-02-24T07:36:51.679 INFO:tasks.ceph.osd.2.smithi037.stderr: 2: (C_ReplicatedBackend_OnPullComplete::finish(ThreadPool::TPHandle&)+0x198) [0x7f90e6aa8298] 2017-02-24T07:36:51.679 INFO:tasks.ceph.osd.2.smithi037.stderr: 3: (PrimaryLogPG::BlessedGenContext<ThreadPool::TPHandle&>::finish(ThreadPool::TPHandle&)+0xb0) [0x7f90e69ab9b0] 2017-02-24T07:36:51.680 INFO:tasks.ceph.osd.2.smithi037.stderr: 4: (GenContextWQ::_process(GenContext<ThreadPool::TPHandle&>*, ThreadPool::TPHandle&)+0xf) [0x7f90e68396ff] 2017-02-24T07:36:51.680 INFO:tasks.ceph.osd.2.smithi037.stderr: 5: (ThreadPool::WorkQueueVal<GenContext<ThreadPool::TPHandle&>*, GenContext<ThreadPool::TPHandle&>*>::_void_process(void*, ThreadPool::TPHandle&)+0x62) [0x7f90e683c392] 2017-02-24T07:36:51.680 INFO:tasks.ceph.osd.2.smithi037.stderr: 6: (ThreadPool::worker(ThreadPool::WorkThread*)+0xb59) [0x7f90e6d43a89] 2017-02-24T07:36:51.680 INFO:tasks.ceph.osd.2.smithi037.stderr: 7: (ThreadPool::WorkThread::entry()+0x10) [0x7f90e6d44a60] 2017-02-24T07:36:51.680 INFO:tasks.ceph.osd.2.smithi037.stderr: 8: (()+0x7dc5) [0x7f90e3becdc5] 2017-02-24T07:36:51.681 INFO:tasks.ceph.osd.2.smithi037.stderr: 9: (clone()+0x6d) [0x7f90e2ce073d]
this is probably the obc ref pulling change that just merged yesterday.
/a/sage-2017-02-24_06:15:05-rados-wip-sage-testing---basic-smithi/855177
History
#1 Updated by Samuel Just almost 6 years ago
- Status changed from 12 to 7
- Assignee set to Samuel Just
#2 Updated by Samuel Just almost 6 years ago
#3 Updated by Sage Weil almost 6 years ago
/a/sage-2017-03-03_00:23:40-rados-wip-osd-full---basic-smithi/875756
#4 Updated by Sage Weil almost 6 years ago
/a/sage-2017-03-07_22:50:21-rados-wip-sage-testing---basic-smithi/893435
#5 Updated by Sage Weil almost 6 years ago
- Assignee changed from Samuel Just to Sage Weil
#6 Updated by Sage Weil almost 6 years ago
/a/sage-2017-03-23_22:01:22-rados-wip-sage-testing---basic-smithi/937859
#7 Updated by Sage Weil almost 6 years ago
- Status changed from 7 to Resolved